--- a/app/src/main/res/layout/activity_coin_price_list.xml
+++ b/app/src/main/res/layout/activity_coin_price_list.xml
@@ -7,7 +7,7 @@
     tools:context=".CoinPriceListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCoinPriceList"
+        android:id="@+id/rvCoin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
